# graphsets

./: README.md  pyproject.toml
graphdatasets/datasets/: CoraDataset.py
graphsets/: __init__.py  helpers.py
graphsets/datasets/: __init__.py
