[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "graphsets"
version = "0.0.11"
authors = [
  { name="Taha Shieenavaz", email="tahashieenavaz@gmail.com" },
]
description = "Hand-curated, famous, and ready graph datasets."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy", "torch"]
keywords = ["graph", "graph datasets", "graph attention networks", "gat", "graph deep learning"]
license = { file = "LICENSE" }
urls = { Homepage="https://github.com/tahashieenavaz/graphsets", Repository="https://github.com/tahashieenavaz/graphsets", Documentation="https://github.com/tahashieenavaz/graphsets#readme" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
graphsets = ["*.md", "*.txt"]
